Added full solo generation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(create_sheet)
 export(generate_chorus)
 export(make_many_solos)
 export(phrase_to_mcsv2)
+export(solo_to_mcsv2)
 export(write_mcsv2)
 import(dplyr)
 import(ggplot2)
