--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: sologenerator
 Type: Package
 Title: Generate monophonic jazz solos for chord sequences
 Version: 0.1.0
-Author: Klaus Frieler
-Maintainer: Klaus Frieler <kf@omniversum.de>
+Author: NN
+Maintainer: NN <nn@nn.org>
 Description: Generates jazz solos using Weimar Bebop Alphabet atoms and midlevel units based on the Weimar Jazz Database.
 License: MIT
 Encoding: UTF-8
