Added stringr full import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ export(solo_to_mcsv2)
 export(write_mcsv2)
 import(dplyr)
 import(ggplot2)
+import(stringr)
 import(tibble)
 importFrom(stats,chisq.test)
-importFrom(stringr,str_locate_all)
 importFrom(utils,write.table)
