--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,11 @@ export(solo_to_mcsv2)
 export(write_mcsv2)
 import(dplyr)
 import(ggplot2)
+import(ggthemes)
+import(purrr)
+import(purrrlyr)
 import(stringr)
 import(tibble)
+import(tidyr)
 importFrom(stats,chisq.test)
 importFrom(utils,write.table)
