Cleaning and updating. Added two new exports for Weimar Bebop Alphabet parsing, find_wba and find_wba_by_phrase

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(chorus_to_mcsv2)
 export(cpc_plot_solo)
 export(create_from_irb)
 export(create_sheet)
+export(find_wba)
+export(find_wba_by_phrase)
 export(generate_solo)
 export(make_many_solos)
 export(parse_chord)
