--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: parkR
 Type: Package
-Title: Generates monophonic jazz solos for chord sequences
+Title: Generating monophonic jazz solos for chord sequences
 Version: 0.1.1
 Authors@R: c(
   person("Klaus", "Frieler", email = "klaus.frieler@ae.mpg.de", role = c("aut","cre"))
@@ -15,7 +15,7 @@ LazyData: true
 Depends: 
     R (>= 3.5.0),
 Imports:
-    tidyverse (>= 1.2.1),
+    tidyverse (>= 1.3.1),
     ggplot2,
     ggthemes,
     dplyr,
