Added harmonic analysis, extended irb data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(create_sheet)
 export(find_wba)
 export(find_wba_by_phrase)
 export(generate_solo)
+export(key_analysis)
 export(make_many_solos)
 export(parse_chord)
 export(phrase_to_mcsv2)
