* Renamed create_from_irb and create_from wjd_db * Introduced parkr_options, printing controlled by debug options (defaults to FALSE now) * Added some exports for some usefull util functions * Added simulate_wjd to simulate solos from the WJD with matching chorusses and tempo * Added handling of NC chords, solved for the time being by inserting random chords, sampled from the WJD * Added missing chord_definitions (minb6, 6)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,24 @@
 
 export(chorus_to_mcsv2)
 export(cpc_plot_solo)
-export(create_from_irb)
-export(create_sheet)
+export(create_leadsheet)
+export(create_leadsheet_from_chord_db)
+export(create_leadsheet_from_irb)
+export(create_leadsheet_from_wjd_db)
 export(find_wba)
 export(find_wba_by_phrase)
+export(freq2_table)
+export(freq_table)
 export(generate_solo)
 export(key_analysis)
 export(make_many_solos)
+export(parkr_options)
 export(parse_chord)
 export(phrase_to_mcsv2)
 export(piano_roll)
+export(pull_unique)
+export(signed_modulo)
+export(simulate_wjd)
 export(solo_to_mcsv2)
 export(write_mcsv2)
 import(dplyr)
