--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(piano_roll)
 export(pull_unique)
 export(signed_modulo)
 export(simulate_wjd)
+export(solo_to_lilypond)
 export(solo_to_mcsv2)
 export(write_mcsv2)
 import(dplyr)
@@ -28,6 +29,7 @@ import(ggthemes)
 import(purrr)
 import(purrrlyr)
 import(stringr)
+import(tabr)
 import(tibble)
 import(tidyr)
 importFrom(stats,chisq.test)
