Added fast_parse_chords and get_cdpcx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,14 @@ export(create_leadsheet)
 export(create_leadsheet_from_chord_db)
 export(create_leadsheet_from_irb)
 export(create_leadsheet_from_wjd_db)
+export(fast_parse_chord)
 export(find_wba)
 export(find_wba_by_phrase)
 export(freq2_table)
 export(freq_table)
 export(generate_solo)
+export(get_cdpcx)
+export(int_span)
 export(key_analysis)
 export(make_many_solos)
 export(parkr_options)
@@ -22,6 +25,8 @@ export(signed_modulo)
 export(simulate_wjd)
 export(solo_to_lilypond)
 export(solo_to_mcsv2)
+export(value_to_vec)
+export(vec_to_value)
 export(write_mcsv2)
 import(dplyr)
 import(ggplot2)
