Added ggassoc, export of jazzomat_palette, fixed bug in build_bigram_stack

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(fuzzyint_hist)
 export(generate_solo)
 export(get_cdpcx)
 export(get_scale_degree_code)
+export(ggassoc)
 export(int_hist)
 export(int_span)
 export(key_analysis)
