--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(fuzzyint_hist)
 export(generate_solo)
 export(get_cdpcx)
 export(get_scale_degree_code)
+export(get_value_context)
 export(ggassoc)
 export(int_hist)
 export(int_span)
@@ -39,6 +40,7 @@ export(pitch_hist)
 export(printf)
 export(pu)
 export(pull_unique)
+export(scales)
 export(signed_modulo)
 export(simulate_wjd)
 export(solo_to_lilypond)
