Added two exports, augmented get_tabr_notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(freq_table)
 export(fuzzyint_hist)
 export(generate_solo)
 export(get_cdpcx)
+export(get_format)
 export(get_scale_degree_code)
 export(get_value_context)
 export(ggassoc)
@@ -41,6 +42,7 @@ export(printf)
 export(pu)
 export(pull_unique)
 export(scales)
+export(set_format)
 export(signed_modulo)
 export(simulate_wjd)
 export(solo_to_lilypond)
