Added ggassoc2, plot_z_values and wjd_subgroup_z_plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(DTL_similarity_search_results_fast)
 export(cdpcx_hist)
 export(chorus_to_mcsv2)
 export(classify_int_pattern)
+export(clean_scale)
 export(cpc_plot_solo)
 export(create_leadsheet)
 export(create_leadsheet_from_chord_db)
@@ -24,6 +25,7 @@ export(get_format)
 export(get_scale_degree_code)
 export(get_value_context)
 export(ggassoc)
+export(ggassoc2)
 export(int_hist)
 export(int_span)
 export(key_analysis)
@@ -38,9 +40,11 @@ export(pc_hist)
 export(phrase_to_mcsv2)
 export(piano_roll)
 export(pitch_hist)
+export(plot_z_values)
 export(printf)
 export(pu)
 export(pull_unique)
+export(safe_seq)
 export(scales)
 export(set_format)
 export(signed_modulo)
@@ -49,6 +53,7 @@ export(solo_to_lilypond)
 export(solo_to_mcsv2)
 export(value_to_vec)
 export(vec_to_value)
+export(wjd_subgroup_z_plot)
 export(write_mcsv2)
 import(dplyr)
 import(ggplot2)
