Several updates, some exports from simile (eg. opti3)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(find_wba)
 export(find_wba_by_phrase)
 export(freq2_table)
 export(freq_table)
+export(fuzzyint_class)
 export(fuzzyint_hist)
 export(generate_solo)
 export(get_cdpcx)
@@ -44,6 +45,7 @@ export(plot_z_values)
 export(printf)
 export(pu)
 export(pull_unique)
+export(punq)
 export(safe_seq)
 export(scales)
 export(set_format)
@@ -51,6 +53,8 @@ export(signed_modulo)
 export(simulate_wjd)
 export(solo_to_lilypond)
 export(solo_to_mcsv2)
+export(to_percent)
+export(to_percent_str)
 export(value_to_vec)
 export(vec_to_value)
 export(wjd_subgroup_z_plot)
