--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,11 @@ export(create_leadsheet_from_chord_db)
 export(create_leadsheet_from_irb)
 export(create_leadsheet_from_wjd_db)
 export(durclass_hist)
+export(edit_dist)
+export(edit_sim)
+export(edit_sim_vec)
 export(fast_parse_chord)
+export(find_best_transposition)
 export(find_wba)
 export(find_wba_by_phrase)
 export(freq2_table)
@@ -21,12 +25,15 @@ export(freq_table)
 export(fuzzyint_class)
 export(fuzzyint_hist)
 export(generate_solo)
+export(get_all_ngrams)
 export(get_cdpcx)
 export(get_format)
 export(get_scale_degree_code)
 export(get_value_context)
 export(ggassoc)
 export(ggassoc2)
+export(harmcore)
+export(harmcore2)
 export(int_hist)
 export(int_span)
 export(key_analysis)
@@ -35,6 +42,8 @@ export(mcm_hist)
 export(messagef)
 export(ngram_analysis)
 export(nice_cdpcx)
+export(opti3)
+export(opti3_df)
 export(parkr_options)
 export(parse_chord)
 export(pc_hist)
@@ -46,6 +55,7 @@ export(printf)
 export(pu)
 export(pull_unique)
 export(punq)
+export(rhythfuzz)
 export(safe_seq)
 export(scales)
 export(set_format)
