Works, fixing some format issues in key analysis.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(generate_solo)
 export(get_all_ngrams)
 export(get_cdpcx)
 export(get_format)
+export(get_ngrams_from_vector)
 export(get_scale_degree_code)
 export(get_value_context)
 export(ggassoc)
