--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: parkR
 Type: Package
 Title: Generating monophonic jazz solos for chord sequences and more
-Version: 0.5.2
+Version: 0.5.3
 Authors@R: c(
   person("Klaus", "Frieler", email = "klaus.frieler@ae.mpg.de", role = c("aut","cre"))
   )
 Maintainer: Klaus Frieler <klaus.frieler@ae.mpg.de>
-Description: Generates jazz solos using Weimar Bebop Alphabet atoms and midlevel units based on the Weimar Jazz Database.
+Description: Jazz analysis packages based on the Jazzomat proejct at the University of Music Franz Liszt Weimar, including routine to generate jazz solos based on the Weimar Jazz Database. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 URL: https://github.com/klausfrieler/parkR
