Cleaned tabr import, added chord sequence complexity (optional)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,7 +76,6 @@ import(ggthemes)
 import(purrr)
 import(purrrlyr)
 import(stringr)
-import(tabr)
 import(tibble)
 import(tidyr)
 importFrom(furrr,future_map_dfr)
@@ -86,4 +85,9 @@ importFrom(httr,http_error)
 importFrom(httr,modify_url)
 importFrom(jsonlite,fromJSON)
 importFrom(stats,chisq.test)
+importFrom(tabr,as_music)
+importFrom(tabr,p)
+importFrom(tabr,score)
+importFrom(tabr,tab)
+importFrom(tabr,track)
 importFrom(utils,write.table)
