On my way to regenerate wjd_tpc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(cdpcx_hist)
 export(chorus_to_mcsv2)
 export(classify_int_pattern)
 export(clean_scale)
+export(cpc_hist)
 export(cpc_plot_solo)
 export(create_leadsheet)
 export(create_leadsheet_from_chord_db)
