--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: parkR
 Type: Package
 Title: Generating monophonic jazz solos for chord sequences and more
-Version: 0.5.5
+Version: 0.5.6
 Authors@R: c(
   person("Klaus", "Frieler", email = "klaus.frieler@ae.mpg.de", role = c("aut","cre"))
   )
@@ -16,7 +16,7 @@ Depends:
     R (>= 3.5.0),
 Imports:
     tidyverse (>= 1.3.1),
-    ggplot2,
+    ggplot2 (>= 3.4.0),
     ggthemes,
     dplyr,
     tibble,
